Correcting logo being too small

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,6 +23,7 @@ body {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(10, 1fr);
+  position: relative;
 
   .top-left-section {
     grid-column: 1/7;
@@ -32,7 +33,8 @@ body {
     background-position: center;
 
     nav {
-      width: 50rem;
+      position: absolute;
+      width: 40%;
       height: 10rem;
 
       .burger-nav {
@@ -44,10 +46,10 @@ body {
         justify-content: flex-start;
         align-items: center;
 
-        margin: 4rem 8rem;
+        padding: 4rem 5rem;
 
         .logo {
-          width: 12rem;
+          min-width: 12rem;
           margin-right: 3rem;
         }
 
@@ -57,6 +59,7 @@ body {
           display: flex;
           align-items: center;
           justify-content: space-around;
+          margin-left: 3rem;
           a {
             text-decoration: none;
             font-size: 1.5rem;
@@ -265,6 +268,12 @@ body {
     .top-right-section {
       grid-column: 1;
       grid-row: 2/3;
+      padding: 2rem;
+
+      h1 {
+        font-size: 2rem;
+        padding-bottom: 2rem;
+      }
 
       .btn-container {
         top: -8rem;
@@ -281,6 +290,7 @@ body {
     .bot-middle-section {
       grid-column: 1;
       grid-row: 4/5;
+      padding: 2rem;
     }
     .bot-right-section {
       grid-column: 1;
